samples/_failures_safe/1761356425_8bd3b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f046b6f4.c: In function ‘main’:
./samples/SAFE/__tmp_f046b6f4.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
